--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">RecyclerView</string>
+    <string name="app_name">Chat</string>
+    <string name="loading">Загрузка...</string>
 </resources>
